--- a/test 1.html
+++ b/test 1.html
@@ -5,10 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, dolorum consequuntur fugiat minima vitae a. Accusantium saepe harum quos quod, placeat tenetur! Neque dolores exercitationem tenetur delectus sequi numquam soluta?</h1>
 
-    <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In consequatur similique id veniam recusandae soluta facilis, dolorum, adipisci dolore, odio doloremque dolorem nulla. Ex consectetur dolorum accusantium officiis reiciendis nam nisi, voluptatum maxime saepe, corporis incidunt iusto possimus quo suscipit dicta sit ratione, mollitia magni. Amet consequatur doloremque libero omnis!</h2>
+    <style>
+        td{
+            border: 2px solid gray;
+            padding: 10px;
+        }
+    </style>
+</head>
+
+
+<body>
+    
+    <table class="Rahat">
+        <thead>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>kola</td>
+                <td>labo</td>
+                <td>jambora</td>
+                <td>apple</td>
+            </tr>
+            <tr>
+                <td>kola</td>
+                <td>labo</td>
+                <td>jambora</td>
+                <td>apple</td>
+            </tr>
+            <tr>
+                <td>kola</td>
+                <td>labo</td>
+                <td>jambora</td>
+                <td>apple</td>
+            </tr>
+            <tr>
+                <td>kola</td>
+                <td>labo</td>
+                <td>jambora</td>
+                <td>apple</td>
+            </tr>
+        </tbody>
+    </table>
+    
 </body>
 </html>
